1.0.2 (unreleased)
 * Fixed batch counter columns updates (#234, #316)
 * Expose both rpc addresses and local addresses of cassandra nodes in partition
   preferred locations (#325)

1.0.1
 * Add logging of error message when asynchronous task fails in AsyncExecutor.
   (#265)
 * Fix connection problems with fetching token ranges from hosts with
   rpc_address different than listen_address.
   Log host address(es) and ports on connection failures.
   Close thrift transport if connection fails for some reason after opening the transport,
   e.g. authentication failure.
 * Upgrade cassandra driver to 2.0.6.

1.0.0
 * Fix memory leak in PreparedStatementCache leaking PreparedStatements after
   closing Cluster objects. (#183)
 * Allow multiple comma-separated hosts in spark.cassandra.connection.host

1.0.0 RC 6
 * Fix reading a Cassandra table as an RDD of Scala class objects in REPL

1.0.0 RC 5
 * Added assembly task to the build, in order to build fat jars. (#126)
   - Added a system property flag to enable assembly for the demo module which is disabled by default.
   - Added simple submit script to submit a demo assembly jar to a local spark master
 * Fix error message on column conversion failure. (#208)
 * Add toMap and nameOf methods to CassandraRow.
   Reduce size of serialized CassandraRow. (#194)
 * Fixed a bug which caused problems with connecting to Cassandra under
   heavy load (#185)
 * Skip $_outer constructor param in ReflectionColumnMapper, fixes working with
   case classes in Spark shell, added appropriate test cases (#188)
 * Added streaming demo with documentation, new streaming page to docs, new README for running all demos. (#115)

1.0.0 RC 4
 * Upgrade Java driver for Cassandra to 2.0.4. (#171)
 * Added missing CassandraRDD#getPreferredLocations to improve data-locality. (#164)
 * Don't use hosts outside the datacenter of the connection host. (#137)

1.0.0 RC 3
 * Fix open Cluster leak in CassandraConnector#createSession (#142)